# TIC_TAC_TOE-Multiplayer

./: README.md
tic_tac_toe_client/: Cargo.toml
tic_tac_toe_client/src/: game_app.rs  main.rs
tic_tac_toe_client/src/game_service/: mod.rs  model.rs  service.rs
tic_tac_toe_server/: Cargo.toml
tic_tac_toe_server/src/: app_state.rs  cleanup.rs  main.rs  ws_socket.rs
tic_tac_toe_server/src/game/: handlers.rs  message.rs  mod.rs  models.rs
