[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"    
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.26.1"
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
