[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"    

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.26.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
rand = "0.8"
futures = "0.3.31"  # Add this line
once_cell = "1"