[package]
name = "tic_tac_toe_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.137"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.26.1"
uuid = { version = "1.12.1", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["cors"] }
prometheus = "0.13.4"
